--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
                         <a class="color-nombre-menu nav-link active" aria-current="page" href="pages/bebes.html">Bebes</a>
                       </li>
                       <li class="nav-item">
-                        <a class="color-nombre-menu nav-link active" aria-current="page" href="inde.html">Niñas</a>
+                        <a class="color-nombre-menu nav-link active" aria-current="page" href="./pages/niños.html">Niños</a>
                       </li>
                       <li class="nav-item">
-                        <a class="color-nombre-menu nav-link active" aria-current="page" href="inde.html">Jovenes</a>
+                        <a class="color-nombre-menu nav-link active" aria-current="page" href="./pages/jovenes.html">Jovenes</a>
                       </li>
                       <li class="nav-item">
-                        <a class="color-nombre-menu nav-link active" aria-current="page" href="inde.html">Adultos</a>
+                        <a class="color-nombre-menu nav-link active" aria-current="page" href="./pages/adultos.html">Adultos</a>
                       </li>
                     </ul>
                     <form class="d-flex" role="search">
@@ -136,11 +136,9 @@
                   </div>
                   <div class="wow animate__animated animate__pulse col-4 anmpijam">
                     <h2>Redes sociales</h2>
-                    <a href="#"><img src="images/whatsappp.jpg" alt="Whatsapp" width="70"></a>
-                    <a href="#"><img src="images/twitter.png" alt="Twitter" width="70"></a>
-                    <a href="https://www.facebook.com/La-mode-viens-117535656712769/"><img src="images/facebook.png" alt="Facebook" width="70"></a>
-                    <a href="#"><img src="images/instagram.jpg" alt="Instagram" width="70"></a>
-                    <a href="#"><img src="images/gmail.jpg" alt="Gmail" width="70"></a>
+                    <a href="https://api.whatsapp.com/send?phone=573102794577&text=quisiera%20informacion%20de%20la%20prenda..."><i class="fa-brands fa-whatsapp"></i></a>
+                    <a href="https://www.facebook.com/La-mode-viens-117535656712769"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="https://www.facebook.com/messages/t/117535656712769"><i class="fa-brands fa-facebook-messenger"></i></a>
                   </div>
               </div>
             </footer>
