--- a/index.html
+++ b/index.html
@@ -23,38 +23,40 @@
 </head>
 <body>
             <nav class="navbar navbar-expand-lg bg-light">
-                <div class="container-fluid">
-                  <a class="anmpijam navbar-brand" href="index.html"><img src="images/logo.png" alt="logo" width="90"></a>
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
-                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                      <li class="nav-item">
-                        <a class="color-nombre-menu nav-link active" aria-current="page" href="index.html">Inicio</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="color-nombre-menu nav-link active" aria-current="page" href="#nosotros">Nosotros</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="color-nombre-menu nav-link active" aria-current="page" href="pages/bebes.html">Bebes</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="color-nombre-menu nav-link active" aria-current="page" href="./pages/niños.html">Niños</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="color-nombre-menu nav-link active" aria-current="page" href="./pages/jovenes.html">Jovenes</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="color-nombre-menu nav-link active" aria-current="page" href="./pages/adultos.html">Adultos</a>
-                      </li>
-                    </ul>
-                    <form class="d-flex" role="search">
-                      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                      <button class="btn btn-outline-success" type="submit">Search</button>
-                    </form>
-                  </div>
-                </div>
+    <div class="container-fluid">
+      <a class="anmpijam navbar-brand" href="index.html"><img src="./images/logo.png" alt="logo" width="90"></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="color-nombre-menu nav-link active" aria-current="page" href="index.html">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="color-nombre-menu nav-link active" aria-current="page" href="#nosotros">Nosotros</a>
+          </li>
+          <li class="nav-item">
+            <a class="color-nombre-menu nav-link active" aria-current="page" href="./pages/bebes.html">Bebes</a>
+          </li>
+          <li class="nav-item">
+            <a class="color-nombre-menu nav-link active" aria-current="page" href="#">Niñas</a>
+          </li>
+          <li class="nav-item">
+            <a class="color-nombre-menu nav-link active" aria-current="page" href="./pages/niños.html">Niños</a>
+          </li>
+          <li class="nav-item">
+            <a class="color-nombre-menu nav-link active" aria-current="page" href="#">Adolecentes</a>
+          </li>
+          <li class="nav-item">
+            <a class="color-nombre-menu nav-link active" aria-current="page" href="#">Mujeres</a>
+          </li>
+          <li class="nav-item">
+            <a class="color-nombre-menu nav-link active" aria-current="page" href="#">Hombres</a>
+          </li>
+        </ul>
+      </div>
+    </div>
             </nav>
             <div class="container-fluid">
                 <div class="row">
@@ -68,7 +70,7 @@
                         <p>Ropa para Niños, Niñas, Jovenes y Adultos</p>
                     </div>
                     <div class="col-12 col-sm-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 botonp">
-                        <a href="#" class="boton uno">
+                        <a href="https://api.whatsapp.com/send?phone=573102794577&text=quisiera%20informacion%20de%20la%20prenda..." class="boton uno">
                             <span>whatsapp</span>
                         </a>
                     </div>
@@ -112,12 +114,12 @@
             <div class="container-fluid">
               <div class="row">
                 <div class="niños col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
-                  <a href="#" class="btn-neon">
+                  <a href="pages/niños.html" class="btn-neon">
                     Niñas
                   </a>
                 </div>
                 <div class="mujeres col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
-                  <a href="#" class="btn-neon">
+                  <a href="pages/jovenes.html" class="btn-neon">
                     jovenes
                   </a>
                 </div>
@@ -136,15 +138,17 @@
                   </div>
                   <div class="wow animate__animated animate__pulse col-4 anmpijam">
                     <h2>Redes sociales</h2>
-                    <a href="https://api.whatsapp.com/send?phone=573102794577&text=quisiera%20informacion%20de%20la%20prenda..."><i class="fa-brands fa-whatsapp"></i></a>
-                    <a href="https://www.facebook.com/La-mode-viens-117535656712769"><i class="fa-brands fa-facebook"></i></a>
-                    <a href="https://www.facebook.com/messages/t/117535656712769"><i class="fa-brands fa-facebook-messenger"></i></a>
+                    <div class="redes-soc">
+                      <a href="https://api.whatsapp.com/send?phone=573102794577&text=quisiera%20informacion%20de%20la%20prenda..."><i class="fa-brands fa-whatsapp"></i></a>
+                      <a href="https://www.facebook.com/La-mode-viens-117535656712769"><i class="fa-brands fa-facebook"></i></a>
+                      <a href="https://www.facebook.com/messages/t/117535656712769"><i class="fa-brands fa-facebook-messenger"></i></a>
+                    </div>
                   </div>
-              </div>
             </footer>
     <!-- JavaScript boostrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     <!--wow-->
     <script src="js/wow.min.js"></script>
+    <script src="js/index.js"></script>
 </body>
 </html>
