--- a/pages/bebes.html
+++ b/pages/bebes.html
@@ -43,19 +43,21 @@
                     <a class="color-nombre-menu nav-link active" aria-current="page" href="./bebes.html">Bebes</a>
                   </li>
                   <li class="nav-item">
-                    <a class="color-nombre-menu nav-link active" aria-current="page" href="./niños.html">Niños</a>
+                    <a class="color-nombre-menu nav-link active" aria-current="page" href="./niños.html">Niñas</a>
                   </li>
                   <li class="nav-item">
-                    <a class="color-nombre-menu nav-link active" aria-current="page" href="./jovenes.html">Jovenes</a>
+                    <a class="color-nombre-menu nav-link active" aria-current="page" href="./jovenes.html">Niños</a>
                   </li>
                   <li class="nav-item">
-                    <a class="color-nombre-menu nav-link active" aria-current="page" href="./adultos.html">Adultos</a>
+                    <a class="color-nombre-menu nav-link active" aria-current="page" href="#">Adolecentes</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="color-nombre-menu nav-link active" aria-current="page" href="#">Mujeres</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="color-nombre-menu nav-link active" aria-current="page" href="#">Hombres</a>
                   </li>
                 </ul>
-                <form class="d-flex" role="search">
-                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
               </div>
             </div>
     </nav>
@@ -67,7 +69,7 @@
     <section class="container-fluid">
         <div class="row">
             <div class="wow animate__animated animate__pulse col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12 anmpijam">
-              <h2 class="titulo-pijamas-bb">Pijamas Niñas</h2>
+              <h2 id="pijamas" class="titulo-pijamas-bb">Pijamas Bebes</h2>
             </div>
             <div class="descripcion-pijamas col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3 col-xxl-3">
                 <img class="pijamas" src="../images/pijamas.jpg" alt="pijamas para bebes">
@@ -149,10 +151,29 @@
               </div>
               <div class="wow animate__animated animate__pulse col-4 anmpijam">
                 <h2>Redes sociales</h2>
-                <a href="https://api.whatsapp.com/send?phone=573102794577&text=quisiera%20informacion%20de%20la%20prenda..."><i class="fa-brands fa-whatsapp"></i></a>
-              <a href="https://www.facebook.com/La-mode-viens-117535656712769"><i class="fa-brands fa-facebook"></i></a>
-              <a href="https://www.facebook.com/messages/t/117535656712769"><i class="fa-brands fa-facebook-messenger"></i></a>
+                <div class="redes-soc">
+                  <a href="https://api.whatsapp.com/send?phone=573102794577&text=quisiera%20informacion%20de%20la%20prenda..."><i class="fa-brands fa-whatsapp"></i></a>
+                  <a href="https://www.facebook.com/La-mode-viens-117535656712769"><i class="fa-brands fa-facebook"></i></a>
+                  <a href="https://www.facebook.com/messages/t/117535656712769"><i class="fa-brands fa-facebook-messenger"></i></a>
+                </div>
               </div>
+          </div>
+          <div class="navegacionpuntero">
+            <div class="tamañozap">
+              <a class="nonehjk" href="#pijamas"><span>Pijamas</span></a>
+            </div>
+            <div class="tamañozap">
+              <a class="nonehjk" href=""><span>zapatos</span></a>
+            </div>
+            <div class="tamañozap">
+              <a class="nonehjk" href=""><span>zapatos</span></a>
+            </div>
+            <div class="tamañozap">
+              <a class="nonehjk" href=""><span>zapatos</span></a>
+            </div>
+            <div class="tamañozap">
+              <a class="nonehjk" href=""><span>zapatos</span></a>
+            </div>
           </div>
     </footer>
     <!-- JavaScript boostrap -->
