--- a/pages/niños.html
+++ b/pages/niños.html
@@ -26,38 +26,40 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-light">
-            <div class="container-fluid">
-              <a class="anmpijam navbar-brand" href="../index.html"><img src="../images/logo.png" alt="logo" width="90"></a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="color-nombre-menu nav-link active" aria-current="page" href="../index.html">Inicio</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="color-nombre-menu nav-link active" aria-current="page" href="#nosotros">Nosotros</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="color-nombre-menu nav-link active" aria-current="page" href="./bebes.html">Bebes</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="color-nombre-menu nav-link active" aria-current="page" href="./niños.html">Niños</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="color-nombre-menu nav-link active" aria-current="page" href="./jovenes.html">Jovenes</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="color-nombre-menu nav-link active" aria-current="page" href="./adultos.html">Adultos</a>
-                      </li>
-                </ul>
-                <form class="d-flex" role="search">
-                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
-              </div>
-            </div>
+    <div class="container-fluid">
+      <a class="anmpijam navbar-brand" href="../index.html"><img src="../images/logo.png" alt="logo" width="90"></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="color-nombre-menu nav-link active" aria-current="page" href="../index.html">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="color-nombre-menu nav-link active" aria-current="page" href="#nosotros">Nosotros</a>
+          </li>
+          <li class="nav-item">
+            <a class="color-nombre-menu nav-link active" aria-current="page" href="./bebes.html">Bebes</a>
+          </li>
+          <li class="nav-item">
+            <a class="color-nombre-menu nav-link active" aria-current="page" href="./niños.html">Niñas</a>
+          </li>
+          <li class="nav-item">
+            <a class="color-nombre-menu nav-link active" aria-current="page" href="./jovenes.html">Niños</a>
+          </li>
+          <li class="nav-item">
+            <a class="color-nombre-menu nav-link active" aria-current="page" href="#">Adolecentes</a>
+          </li>
+          <li class="nav-item">
+            <a class="color-nombre-menu nav-link active" aria-current="page" href="#">Mujeres</a>
+          </li>
+          <li class="nav-item">
+            <a class="color-nombre-menu nav-link active" aria-current="page" href="#">Hombres</a>
+          </li>
+        </ul>
+      </div>
+    </div>
     </nav>
     <section class="container-fluid">
       <div class="row">
@@ -149,10 +151,29 @@
               </div>
               <div class="wow animate__animated animate__pulse col-4 anmpijam">
                 <h2>Redes sociales</h2>
-                <a href="https://api.whatsapp.com/send?phone=573102794577&text=quisiera%20informacion%20de%20la%20prenda..."><i class="fa-brands fa-whatsapp"></i></a>
-              <a href="https://www.facebook.com/La-mode-viens-117535656712769"><i class="fa-brands fa-facebook"></i></a>
-              <a href="https://www.facebook.com/messages/t/117535656712769"><i class="fa-brands fa-facebook-messenger"></i></a>
+                <div class="redes-soc">
+                  <a href="https://api.whatsapp.com/send?phone=573102794577&text=quisiera%20informacion%20de%20la%20prenda..."><i class="fa-brands fa-whatsapp"></i></a>
+                  <a href="https://www.facebook.com/La-mode-viens-117535656712769"><i class="fa-brands fa-facebook"></i></a>
+                  <a href="https://www.facebook.com/messages/t/117535656712769"><i class="fa-brands fa-facebook-messenger"></i></a>
+                </div>
               </div>
+          </div>
+          <div class="navegacionpuntero">
+            <div class="tamañozap">
+              <a class="nonehjk" href=""><span>zapatos</span></a>
+            </div>
+            <div class="tamañozap">
+              <a class="nonehjk" href=""><span>zapatos</span></a>
+            </div>
+            <div class="tamañozap">
+              <a class="nonehjk" href=""><span>zapatos</span></a>
+            </div>
+            <div class="tamañozap">
+              <a class="nonehjk" href=""><span>zapatos</span></a>
+            </div>
+            <div class="tamañozap">
+              <a class="nonehjk" href=""><span>zapatos</span></a>
+            </div>
           </div>
     </footer>
     <!-- JavaScript boostrap -->
